Refaktorering pList - Collections og ToList()